# wg21-papers

./: P000000.md  P0000R0.md  P4313R0.md  P4313R1.md
P0000R0/: .bazelrc  .gitignore  MODULE.bazel
P0000R0/docker/: Dockerfile
P0000R0/src/: BUILD.bazel  bitmask.hpp  main.cpp
P0000R0/src/tests/: BUILD.bazel  test_bitmask_operators.cpp  test_bitmask_operators_predefined_enum.cpp
P4313/: .bazelrc  README.md  notes
P4313/src/: BUILD.bazel  bitmask.hpp  main.cpp
P4313/src/tests/: test_bitmask_operators.cpp  test_bitmask_operators_death.cpp  test_bitmask_operators_predefined_enum.cpp
p000000/: .bazelrc  MODULE.bazel  README.md
p000000/docker/: Dockerfile
p000000/src/: BUILD.bazel  bitmask_operators.hpp  main.cpp  p3394.hpp
p000000/src/tests/: BUILD.bazel  test_bitmask_operators.cpp
