load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_build_error//lang/cc:defs.bzl", "cc_build_error_test")
load("@rules_build_error//matcher:defs.bzl", "matcher")

cc_test(
    name = "test_bitmask_operators",
    srcs = ["test_bitmask_operators.cpp"],
    deps = [
        "//src:bitmask",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_bitmask_operators_on_predefined_enum",
    srcs = ["test_bitmask_operators_predefined_enum.cpp"],
    deps = [
        "//src:bitmask",
        "@googletest//:gtest_main",
    ],
)

cc_build_error_test(
    name = "test_bitmask_operators_compile_error",
    src = "test_bitmask_operators_death.cpp",
    compile_stderr = matcher.has_substr("error: no match for 'operator|' (operand types are 'C' and 'C')"),
)

